finish 1:User login 2:Search function 3:Display pages for four type of date

--- a/locallibrary/HotZone/templates/HotZone/location_list.html
+++ b/locallibrary/HotZone/templates/HotZone/location_list.html
@@ -6,6 +6,8 @@
       {% for location in location_list %}
       <li>
         <p>{{location.Address}}</p>
+        <p>{{location.Location}}</p>
+        <p>({{location.XCoordinate}},{{location.YCoordinate}})</p>
       </li>
       {% endfor %}
     </ul>
