--- a/locallibrary/HotZone/templates/base_generic.html
+++ b/locallibrary/HotZone/templates/base_generic.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -21,11 +20,24 @@
             <div class="col-sm-2">
                 {% block sidebar %}
                 <ul class="sidebar-nav">
+
+                    {% if user.is_authenticated %}
+                    <li>User: {{ user.get_username }}</li>
+                    <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+                    {% endif %}
+                    <p>----------------</p>
+
+
+
+
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'virus' %}">Virus</a></li>
                     <li><a href="{% url 'patient' %}">Patient</a></li>
                     <li><a href="{% url 'case' %}">Case</a></li>
                     <li><a href="{% url 'location' %}">Location</a></li>
+                    <li><a href="{% url 'search' %}">Search</a></li>
                 </ul>
                 {% endblock %}
             </div>
