Finish Reset Password

--- a/locallibrary/templates/registration/password_reset_done.html
+++ b/locallibrary/templates/registration/password_reset_done.html
@@ -1,10 +1,5 @@
-{% extends "base_generic.html" %}
-{% block content %}
+<h3>Password reset complete</h3>
 
-<form action="" method="post">{% csrf_token %}
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-        <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
-</form>
+<p>Your password has been set. You may go ahead and log in now.</p>
 
-{% endblock %}
+<a href="/">Log in</a>
