--- a/locallibrary/templates/clutser/index.html
+++ b/locallibrary/templates/clutser/index.html
@@ -19,34 +19,29 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Find Cluster </h1>
     <div class="row" style="padding-top: 10px;">
         <div class="col-md-3" style="padding-top: 20px;">
             <div>
                 <!-- 条件选择 -->
                 <form action="/data/" method="post">
                     {% csrf_token %}
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 20px">
                         <label for="inputEmail3" class="col-sm-3 control-label">Distance</label>
-                        <div class="col-sm-10">
-                        <input type="text" name="distance" class="form-control" id="inputEmail3" placeholder="Proximity Criterion">
-                        </div>
+                        <input type="text" name="distance" class="form-control" id="inputEmail3" placeholder="Proximity Criterion" value="{{ distance }}">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 20px">
                         <label for="date-picker" class="col-sm-3 control-label">Time</label>
-                        <div class="col-sm-10">
-                        <input type="text" name="time" class="form-control" id="date-picker" placeholder="Period Criterion">
-                        </div>
+                        <input type="text" name="time" class="form-control" id="date-picker" placeholder="Period Criterion" value="{{ time }}">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 20px">
                         <label for="date-picker" class="col-sm-3 control-label">Number</label>
-                        <div class="col-sm-10">
-                        <input type="text" name="number" class="form-control" id="date-picker" placeholder="Number Criterion">
-                        </div>
+                        <input type="text" name="number" class="form-control" id="date-picker" placeholder="Number Criterion" value="{{ number }}">
                     </div>
-                    <div class="form-group text-center">
-                        <button class="btn btn-success btn-lg">Cluster</button>
+                    <div class="form-group">
+                        <button class="btn btn-success" style="margin-left: 20px; margin-right: 20px; margin-top: 10px; width: 100%">Cluster</button>
                     </div>
                 </form>
 
@@ -73,9 +68,17 @@
         </div> -->
 
         <div class="col-md-6">
-            <div style="background-color: antiquewhite; height: 500px;"></div>
-            <div class="text-center">
-                Virus name:xxxx  Case Number: xxxx
+            <div style="background-color: antiquewhite; height: 500px; margin-bottom: 20px; overflow:auto">
+                <div class="text-center" style="padding-top: 100px; padding-bottom: 20px">
+                    <b>Total clusters:</b> {{ result.total_clusters }}<br/>
+                    <b>Total un-clustered:</b> {{ result.total_un_clustered }}<br/>
+                {% for cluster in result.clusters %}
+                    <b>Cluster {{ cluster.name }} size {{ cluster.size }}<br/></b>
+                    {% for data in cluster.data %}
+                    {{ data }}<br/>
+                    {% endfor %}
+                {% endfor %}
+            </div>
             </div>
         </div>
     </div>
